--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ footer p {
     width: 0;
 	border-left: 30px solid transparent;
     border-right: 30px solid transparent;
-    border-top: 30px solid #e3f2fd;
+    border-top: 30px solid #2D112B;
 }
 
 /**********************
